--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-fontawesome": "^5.7.0",
+    "react-native-ui-kitten": "^2.0.1",
     "react-navigation": "^1.0.0-beta.21"
   }
 }
